--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,10 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+h1, h2, h3, h4, h5, h6, p, button{
+    margin: 0px;
+}
 .open-sans-primary{
   font-family: "Open Sans", sans-serif;
   font-optical-sizing: auto;
@@ -28,6 +32,21 @@
     transition: 1s all ease-in-out;
 }
 
+.primary-header{
+    color: #181818;
+    font-size: 35px;
+    font-weight: bold;
+}
+
+/* header */
+.header{
+    background-image: url(../images/developer.png), url(../images/header_bg.png);
+    background-color: #FFF8F3;
+    background-position: top left, bottom right;
+    background-repeat: no-repeat;
+
+}
+
 nav h3 span{
     color: #FD6E0A;
 }
@@ -36,7 +55,8 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 50px 200px;
+    margin: 0px 200px;
+    padding-top: 50px;
 
 }
 
@@ -68,4 +88,89 @@ nav ul li a{
 nav ul li a:hover{
     color: #FD6E0A;
     cursor: pointer;
+}
+
+
+/* banner */
+
+.banner{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0px 30px 0px 200px;
+}
+
+.banner-content{
+    max-width: 585px;
+}
+
+.banner-content h3{
+    color: #474747;
+    font-size: 45px;
+    font-weight: 600;
+}
+
+.banner-content h2{
+    color: #181818;
+    font-size: 85px;
+    font-weight: 700;
+}
+
+.banner-content p{
+    color: #757575;
+    font-size: 18px;
+    line-height: 30px;
+    margin: 20px 0px 30px 0px;
+}
+
+.btn-secondary a{
+    text-decoration: none;
+    color: white;
+}
+
+.banner-images img{
+    width: 584px;
+    margin-top: 47px;
+
+}
+
+/* about */
+
+.about{
+    padding: 130px 200px;
+}
+
+.about-content{
+    background-color: #FFF8F3;
+    padding: 131px 156px;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.about-content p{
+    color: #757575;
+    font-size: 18px;
+    line-height: 30px;
+    margin: 30px 0px;
+}
+
+.about-card-content{
+    display: flex;
+    justify-content: space-around;
+}
+
+
+.about-card p{
+    color: #757575;
+    font-size: 20px;
+    line-height: 30px;
+    margin: 0px;
+    margin-bottom: 10px;
+}
+
+.about-card h6{
+    color: #474747;
+    font-size: 20px;
+    font-weight: bold;
+    line-height: 30px;
 }
