--- a/styles/style.css
+++ b/styles/style.css
@@ -137,10 +137,10 @@ nav ul li a:hover{
 /* about */
 
 .about{
-    /* padding: 130px 200px; */
-    max-width: 1140px;
+    padding: 130px 200px;
+    /* max-width: 1140px;
     margin: 0px auto;
-    margin-top: 130px;
+    margin-top: 130px; */
 }
 
 .about-content{
@@ -176,4 +176,48 @@ nav ul li a:hover{
     font-size: 20px;
     font-weight: bold;
     line-height: 30px;
+}
+/* service */
+
+.service{
+    padding: 0px 200px 130px 200px;
+}
+
+.service-container h2{
+    text-align: center;
+}
+
+.service-container .service-para{
+    color: #757575;
+    font-size: 18px;
+    line-height: 30px;
+    margin: 30px 0px 50px 0px;
+    text-align: center;
+    padding: 0px 165px;
+    
+}
+
+.service-card-content{
+    display: flex;
+    justify-content: space-between;
+    gap: 24px;
+}
+
+.service-card{
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+.service-card h5{
+    color: #181818;
+    font-size: 20px;
+    font-weight: bold;
+    margin: 30px 0px 20px 0px;
+}
+
+.service-card p{
+    color: #757575;
+    font-size: 16px;
+    line-height: 28px;
 }
