--- a/styles/style.css
+++ b/styles/style.css
@@ -322,3 +322,8 @@ textarea{
 .icon-image{
     margin: 0px 24px;
 }
+
+input[type="text"]:focus, input[type="email"], textarea{
+    color: #757575;
+    outline: 0;
+}
